--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "react-native": "0.64.1",
     "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
+    "react-native-text-ticker": "^1.12.0",
     "react-native-track-player": "^1.2.7",
     "react-native-vector-icons": "^8.1.0"
   },
