--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/slider": "^3.0.3",
     "@react-navigation/bottom-tabs": "^6.0.0-next.15",
+    "@react-navigation/material-bottom-tabs": "^5.3.15",
     "@react-navigation/native": "^6.0.0-next.11",
     "@react-navigation/native-stack": "^6.0.0-next.4",
     "@react-navigation/stack": "^6.0.0-next.22",
@@ -20,6 +21,7 @@
     "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-paper": "^4.9.1",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
