--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.0.0-next.11",
     "@react-navigation/native-stack": "^6.0.0-next.4",
     "@react-navigation/stack": "^6.0.0-next.22",
+    "axios": "^0.21.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-elements": "^3.4.1",
