--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,6 +14,8 @@ target 'MusicApp' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'Interactable', :path => '../node_modules/react-native-interactable'
+
   target 'MusicAppTests' do
     inherit! :complete
     # Pods for testing
