--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/slider": "^3.0.3",
     "@react-navigation/bottom-tabs": "^6.0.0-next.15",
     "@react-navigation/material-bottom-tabs": "^5.3.15",
