--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.9.1",
     "react-native-reanimated": "^2.2.0",
+    "react-native-root-toast": "^3.2.1",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
     "react-native-text-ticker": "^1.12.0",
